toggle out of container fix

--- a/src/mobile/components/common/ToggleButton/ToggleButton.module.scss
+++ b/src/mobile/components/common/ToggleButton/ToggleButton.module.scss
@@ -11,7 +11,7 @@
   height: 0;
 
   &:checked + span:before {
-    transform: translateX(20px);
+    transform: translateX(13px);
     box-shadow: #5bff00 0px 0px 5px 1px
   }
 }
